// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlledInput Snapshots should match snapshot for form 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        EMAIL
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <TextInput
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Enter email"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="email-input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        PASSWORD
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTIconView
            accessibilityLabel="lock-closed-outline"
            iconName="lock-closed-outline"
            style={
              [
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "marginRight": 14,
                },
              ]
            }
            testID="Ionicons-icon"
          />
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#475569"
            ref={null}
            secureTextEntry={true}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="password-input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        USERNAME
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <TextInput
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Enter username"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="username-input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        BIO
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <TextInput
            multiline={true}
            numberOfLines={4}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Tell us about yourself"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="bio-input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ControlledInput Snapshots should match snapshot with values 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        EMAIL
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <TextInput
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Enter email"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="email-input"
            value="test@example.com"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        PASSWORD
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTIconView
            accessibilityLabel="lock-closed-outline"
            iconName="lock-closed-outline"
            style={
              [
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "marginRight": 14,
                },
              ]
            }
            testID="Ionicons-icon"
          />
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#475569"
            ref={null}
            secureTextEntry={true}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="password-input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        USERNAME
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <TextInput
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Enter username"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="username-input"
            value="testuser"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    ref={null}
  >
    <View
      ref={null}
      style={
        [
          {
            "marginBottom": 20,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <Text
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "Courier New",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
      >
        BIO
      </Text>
      <View
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
            [
              {
                "borderRadius": 16,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.03)",
                "borderRadius": 16,
              },
              {
                "borderColor": "rgba(255, 255, 255, 0.05)",
                "borderWidth": 1,
              },
              {
                "padding": 16,
              },
              [
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.03)",
                  "borderColor": "transparent",
                  "borderRadius": 18,
                  "borderWidth": 1,
                  "height": 58,
                  "justifyContent": "center",
                  "padding": 0,
                },
                false,
                null,
                undefined,
              ],
              undefined,
            ],
          ]
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <TextInput
            multiline={true}
            numberOfLines={4}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Tell us about yourself"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="bio-input"
            value="Hello world"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
